# SaveStack

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b83ff92c372c_create_users_table.py  bc1d5551fcd7_create_users_table.py  d088bd18d2b3_add_accounts_deposits_ledger_entries_.py
backend/app/: auth.py  db.py  main.py  models.py
backend/app/routes/: auth.py
backend/app/services/: ledger.py
backend/tests/: test_ledger.py
