[project]
name = "savestack-backend"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "redis",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt==4.0.1",
    "python-multipart",
    "alembic",
    "psycopg2-binary",
    "pytest",
    "pytest-asyncio"
]